[package]
name = "osoy-aur"
version = "0.1.0"
authors = ["Emil Rasmus Merzin <rasmusmerzin@gmail.com>"]
edition = "2018"

[dependencies]
osoy = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
terminal_size = "0.1.16"
